Add compatibility with latest Irace version and add follower mode to irace executor to make debugging easier